# DistributedCompute

./: .gitignore  CMakeLists.txt  DistributedCompute.ncb  DistributedCompute.sln  README.md  dataContract.h  dataContract_transpic.h
ClientTest/: ClientTest.cpp  ClientTest.vcproj  ReadMe.txt  stdafx.cpp
DCompute/: client.h  config  contracts.h  joberServer.h  lb.h  lru.h  serializationInterface.h  task.h  typeWrappers.h  util.h  worker.h  zmqEx.h
DComputeLib/: .gitignore  DComputeLib.cpp  DComputeLib.vcproj  DComputeLib.vcxproj  DComputeu.def  DComputeud.def  ReadMe.txt  stdafx.cpp
DComputeLib/src/: client.cpp  contracts.cpp  joberServer.cpp  lb.cpp  lru.cpp  string.cpp  thread.cpp  typeReflection.cpp  util.cpp  worker.cpp  zmqEx.cpp
JoberserverTest/: JoberserverTest.cpp  JoberserverTest.vcproj  ReadMe.txt  stdafx.cpp
WorkerTest/: ReadMe.txt  WorkerTest.cpp  WorkerTest.vcproj  stdafx.cpp
unitTest/: .gitignore  LBTest.cpp  LRUTest.cpp  MyType2serialization.txt  ReadMe.txt  TaskTest.cpp  ThreadTest.cpp  serialization.txt  serializationTest.cpp  stdafx.h  stringTest.cpp  test.cpp  test.vcproj  test.vcxproj  typeReflectionTest.cpp  zmqExTest.cpp
